--- a/css/style2.css
+++ b/css/style2.css
@@ -1,7 +1,3 @@
-html {
-    background-color: #161A1F;;
-}
-
 :root {
     --pn_lightblue: #55CDFF;
   }
@@ -84,6 +80,7 @@ body{
 header img{
     width: 40px;
     margin-right: auto;
+    vertical-align: middle;
 }
 
 .navigation{
@@ -241,7 +238,7 @@ ul.navbar-text {
 
 .title{
 	font-family: 'Poppins', sans-serif;
-	font-size: 26pt;
+	font-size: 24pt;
     line-height: 112.3%;
     display: flex;
     margin-left: auto;
@@ -254,7 +251,7 @@ ul.navbar-text {
 }
 
 .subtitle{
-	font-size: 20pt;
+	font-size: 18pt;
 	font-weight: 700;
     padding: 25px 0;
 }
@@ -299,7 +296,7 @@ ul.navbar-text {
 
 
 .dlsub{
-	font-size: 11pt;
+	font-size: 10pt;
     padding-top: .8em;
 }
 
@@ -317,7 +314,7 @@ ul.navbar-text {
     background: linear-gradient(91.56deg, #FF1658 -39.51%, #FF612E 32.32%, #FF9D0D 89.96%, #FFB400 130.74%);
     padding:15px 20px;
     border-radius: 500px;
-    width:20em;
+    width:18em;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -476,7 +473,7 @@ hr {
     background-attachment:scroll;
     background-size: 130% auto, cover;
     background-position: top, 0em;
-    padding-top: 70%;
+    padding-top: 80%;
 }
 
 .fullscreen-title{
@@ -655,7 +652,7 @@ p.addon-text {
 .more-row1{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 90%;
     margin-left:auto;
     margin-right:auto;
 }
@@ -669,7 +666,7 @@ p.addon-text {
 .more-igdb{
     margin-left:auto;
     margin-right:auto;
-    padding: 0em 2em;
+    width: 90%;
 }
 
 .more h2{
@@ -715,7 +712,7 @@ p.addon-text {
 
 .faq h1{
     color:var(--pn_lightblue);
-    font-size: 30pt;
+    font-size: 26pt;
     font-family: 'Poppins';
     font-weight: 700;
     margin: 0;
@@ -736,7 +733,7 @@ p.addon-text {
     margin-left:auto;
     margin-right:auto;
     padding: 3% 10% 3% 10%;
-    font-size: 17px;
+    font-size: 12pt;
     line-height: 26px;
 }
 
