--- a/css/style2.css
+++ b/css/style2.css
@@ -759,6 +759,7 @@ p.addon-text {
         background-repeat: no-repeat;
         background-size: cover, cover;
         background-position: top left, bottom right;
+        padding: 5% 0%;
     }
 
     .faq h1{
